tests/paczka1/small_fuzzy/24179319.err
Error in line 1: IQv7Mj8D8Q A374 66,9
Error in line 5: Q8zC A211 97,5
Error in line 7: Q8zC S175 9,5
